# chatgpt-heatmap-web

./: .dockerignore  .eslintrc.json  .gitignore  CNAME  Dockerfile  README.md  bun.lockb  llms.txt  next.config.mjs  package.json  pyproject.toml  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: assign-issue.yml  deploy.yml  publish-image.yml
app/: globals.css  layout.tsx  page.tsx
components/: calendar-heatmap.tsx  chatgpt-heatmap.tsx  heatMapForm.tsx  heatmap.tsx  modeToggle.tsx
components/ui/: command.tsx  dialog.tsx  dropdown-menu.tsx
lib/: aggregate.test.ts  aggregate.ts  parse.test.ts  parse.ts  types.ts
public/: llms.txt
