[project]
name = "chatgpt-heatmap-web"
version = "0.1.0"
description = "A heatmap for viewing your ChatGPT interactions over the years"
authors = [
    {name = "CSK", email = "73425927+cr2007@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pytz (>=2024.2,<2025.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
